package western.grammaire;

public interface Genre {
    String getArticleDefini();
    String getArticleIndefini();
    String getArticlePartitif();
    String getArticleDe();
}
